<resources>
    <string name="app_name">SkillHubApp</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_to_skillhub">Welcome to SkillHub</string>
    <string name="choose_how_you_want_to_explore_the_platform">Choose how you want to explore the platform</string>
    <string name="icon">🎓</string>
    <string name="student_portal">Student Portal</string>
    <string name="browse_thousands_of_courses">• Browse thousands of courses</string>
    <string name="track_your_learning_progress">• Track your learning progress</string>
    <string name="get_personalized_recommendations">• Get personalized recommendations</string>
    <string name="continue_as_student">Continue as Student</string>
    <string name="ic2">👤</string>
    <string name="instructor_portal">Instructor Portal</string>
    <string name="create_and_manage_courses">• Create and manage courses</string>
    <string name="track_revenue_and_analytics">• Track revenue and analytics</string>
    <string name="engage_with_your_students">• Engage with your students</string>
    <string name="continue_as_instructor">Continue as Instructor</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="log_in">Log In</string>
    <string name="wel">Welcome!</string>
    <string name="enter_your_credentials">Enter your credentials</string>
    <string name="email">Email :</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="todo">TODO</string>
    <string name="password">Password :</string>
    <string name="lock">lock</string>
    <string name="pw">Password</string>
    <string name="eye">eye</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="li">Log In</string>
    <string name="enter_your_registered_email">registered_email</string>
    <string name="send_reset_link">send reset link</string>
    <string name="Password">Password</string>
</resources>
