<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="#F2F4F8">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="40dp"
        android:paddingBottom="40dp">

       <ImageView
            android:id="@+id/Logo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/Logo" />

        <!-- LOGIN CARD -->
        <androidx.cardview.widget.CardView
            android:id="@+id/loginCard"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            tools:ignore="TextSizeCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                
                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/wel"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvEnterCredentials"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/enter_your_credentials"
                    android:textColor="#757575"
                    android:textSize="14sp" />

                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/email"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/input_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_email"
                        android:tint="#9CA3AF"
                        tools:ignore="ImageContrastCheck" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints="emailAddress"
                        android:background="@android:color/transparent"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#78909C"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/input_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:contentDescription="@string/lock"
                        android:src="@drawable/ic_lock"
                        android:tint="#9CA3AF"
                        tools:ignore="ImageContrastCheck" />

                    <EditText
                        android:id="@+id/Password"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autofillHints="password"
                        android:background="@android:color/transparent"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textColor="#000000"
                        android:textColorHint="#78909C"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/ivTogglePassword"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:contentDescription="@string/eye"
                        android:src="@drawable/ic_eye"
                        android:tint="#9CA3AF"
                        tools:ignore="ImageContrastCheck" />

                </LinearLayout>

                
                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:text="@string/forgot_password"
                    android:textColor="#2563EB"
                    android:textSize="14sp" />

                <!-- LOGIN BUTTON -->
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#0C1325"
                    android:text="@string/li"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <!-- Sign Up Option -->
                <TextView
                    android:id="@+id/tvSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/don_t_have_an_account_sign_up"
                    android:textColor="#2563EB"
                    android:textSize="14sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
